--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -114,7 +114,7 @@ display: none;
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>Principal Email ID</label>
-                                    <input type="password" id="principal_email" placeholder="Principal Email ID" class="form-control" name="principal_email" required>
+                                    <input type="email" id="principal_email" placeholder="Principal Email ID" class="form-control" name="principal_email" required>
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>Principal Phone</label>
@@ -126,7 +126,7 @@ display: none;
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>Number of class</label>
-                                    <input type="text" id="number_class" placeholder="Number of class" class="form-control" name="number_class" required>
+                                    <input type="text" id="number_class" placeholder="E.g. 1-10" class="form-control" name="number_class" required>
                                 </div>
                                  <div class="form-group col-lg-6">
                                     <label>Year of Established</label>
