--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -1,22 +1,13 @@
 <% if (error.length>0) { %>
-<div class="alert alert-danger alert-dismissible fade show">
-	<button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
-		<i class="nc-icon nc-simple-remove"></i>
-	</button>
-	<span><%= error %></span>
+<div class="alert alert-danger " style="width: 70%; margin-left: auto; margin-right: auto;" id="error">
+  <span><%= error %></span>
 </div>
 <% } %> <% if (error_msg.length>0) { %>
-<div class="alert alert-danger alert-dismissible fade show">
-	<button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
-		<i class="nc-icon nc-simple-remove"></i>
-	</button>
-	<span id="errorMessage"><%= error_msg %></span>
+<div class="alert alert-danger " style="width: 70%; margin-left: auto; margin-right: auto;" id="error_msg">
+  <span id="errorMessage"><%= error_msg %></span>
 </div>
 <% } %> <% if (success_msg.length>0) { %>
-<div class="alert alert-success alert-dismissible fade show">
-	<button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
-		<i class="nc-icon nc-simple-remove"></i>
-	</button>
-	<span id="message"><%= success_msg %></span>
+<div class="alert alert-success" style="width: 70%; margin-left: auto; margin-right: auto;" id="success_msg">
+  <span id="message"><%= success_msg %></span>
 </div>
 <% } %>
