--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -111,14 +111,14 @@
                   </li>
                  <li class="treeview">
                      <a href="#">
-                     <i class="fa fa-users"></i><span>Academic Module</span>
+                     <i class="fa fa-users"></i><span>Leave Tracker Module</span>
                      <span class="pull-right-container">
                      <i class="fa fa-angle-left pull-right"></i>
                      </span>
                      </a>
                      <ul class="treeview-menu">
                       
-                        <li><a href="/academic/admit-card"> Card Generation</a></li>
+                        <li><a href="/leave/leave-tracker"> Leave Tracker</a></li>
                       
                      </ul>
                   </li>
@@ -131,7 +131,7 @@
                      </a>
                   </li>
               
-                  <li>
+                  <!-- <li>
                      <a href="/calender/view-calender">
                      <i class="fa fa-calendar"></i> <span>Calender</span>
                      <span class="pull-right-container">
@@ -145,7 +145,7 @@
                      <span class="pull-right-container">
                      </span>
                      </a>
-                  </li>
+                  </li> -->
                    <li>
                      <a href="/complaint/view-complaint">
                      <i class="fa fa-file-text"></i> <span>Complaint</span>
