--- a/views/admin/test-series/online-test.ejs
+++ b/views/admin/test-series/online-test.ejs
@@ -85,6 +85,19 @@
                         </div>
                      </div>
                   </div>
+                   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                     <div id="cardbox2" style="background-color: #1a1a71;">
+                        <div class="statistic-box">
+                           <i class="fa fa-user-secret fa-3x"></i>
+                           <div class="counter-number pull-right">
+                              <span class="count-number">4</span> 
+                              <span class="slight"><i class="fa fa-play fa-rotate-270"> </i>
+                              </span>
+                           </div>
+                           <h3> Daily Quiz</h3>
+                        </div>
+                     </div>
+                  </div>
                  
                 </div>
                 </div>
