--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -118,7 +118,8 @@
                      </a>
                      <ul class="treeview-menu">
                       
-                        <li><a href="/leave/leave-tracker"> Leave Tracker</a></li>
+                        <li><a href="/leave/leave-student-tracker">Student Leave Tracker</a></li>
+                        <li><a href="/leave/leave-faculty-tracker"> Faculty Leave Tracker</a></li>
                       
                      </ul>
                   </li>
