--- a/views/admin/feedback/feedback.ejs
+++ b/views/admin/feedback/feedback.ejs
@@ -267,7 +267,7 @@
 		// 					}
 		// 				});
           
-function viewFeedback(facultyId,schoolId) {
+function viewFeedback(feedbackId) {
     try {
      
       $("#viewFeedbackDiv").html("");
@@ -275,7 +275,7 @@ function viewFeedback(facultyId,schoolId) {
       $.ajax({
          url: `/feedback/view-feedback-byid`,
          type: "post",
-         data:{facultyId:facultyId,schoolId:schoolId},
+         data:{feedbackId:feedbackId},
          dataType: "json",
          cache: false,
          success: function (data) {
@@ -284,16 +284,12 @@ function viewFeedback(facultyId,schoolId) {
             formDetails += `<table class="table table-bordered table-striped"> 
                
              
-               <tr><td>Name</td><td>${data[0].name}</td></tr>
-               <tr><td>Email</td><td>${data[0].email}</td></tr>
-               <tr><td>Gender</td><td>${data[0].gender}</td></tr>
-                <tr><td>Father Name</td><td>${data[0].fathers_name}</td></tr>
-               <tr><td>Mother Name</td><td>${data[0].mothers_name}</td></tr>
-               <tr><td>Parent Phone</td><td>${data[0].parent_phone}</td></tr>
+               <tr><td>Student Name</td><td>${data[0].sname}</td></tr>
+               <tr><td>Faculty Name</td><td>${data[0].fname}</td></tr>
                <tr><td>Class</td><td>${data[0].class_name}</td></tr>
-               <tr><td>School</td><td>${data[0].school_name}</td></tr>
-               <tr><td>address</td><td>${data[0].address}</td></tr>
-               <tr><td>DOB</td><td>${data[0].dob}</td></tr>
+               
+               <tr><td>Feedback</td><td>${data[0].title}</td></tr>
+               <tr><td>Rate</td><td>${data[0].rate}</td></tr>
               
                </table>`;
             $("#viewFeedbackDiv").html(formDetails);
@@ -306,7 +302,7 @@ function viewFeedback(facultyId,schoolId) {
   }
 
 
- function editFeedback(facultyId,schoolId) {
+ function editFeedback(feedbackId) {
     try {
      
       $("#editFeedbackDiv").html("");
@@ -314,7 +310,7 @@ function viewFeedback(facultyId,schoolId) {
       $.ajax({
          url: `/feedback/fetch-feedback-byid`,
          type: "post",
-         data:{facultyId:facultyId,schoolId:schoolId},
+         data:{feedbackId:feedbackId},
          dataType: "json",
          cache: false,
          success: function (data) {
@@ -322,20 +318,20 @@ function viewFeedback(facultyId,schoolId) {
         
             let formDetails = ``;
             formDetails += `<form action="/feedback/update-feedback-by-id" method="post">
-                                  <input type="hidden"  value="${schoolId}" class="form-control" name="school_id">
-                                  <input type="hidden"  value="${facultyId}" class="form-control" name="faculty_id">
+                                  <input type="hidden"  value="${feedbackId}" class="form-control" name="feedback_id">
+                               
                                 
                             <div class="row">
                                
                               
                                 <div class="form-group col-lg-6">
                                     <label>Feedback</label>
-                                    <input type="Number" value="${data.data[0].rate}" class="form-control" name="rate">
+                                    <input type="Number" value="${data[0].rate}" class="form-control" name="rate">
                                 </div>
                                  <div class="form-group col-lg-6">
                                     <label> Feedback</label>
                                   
-                                    <textarea placeholder="Feedback" rows="5" class="form-control" name="feedback">${data.data[0].title}</textarea>
+                                    <textarea placeholder="Feedback" rows="5" class="form-control" name="feedback">${data[0].title}</textarea>
                                 </div>
                               
                                
@@ -356,7 +352,7 @@ function viewFeedback(facultyId,schoolId) {
     }
   }
 
-   function addFeedback(facultyId,schoolId) {
+   function addFeedback(facultyId) {
     try {
      
       $("#addFeedbackDiv").html("");
@@ -364,7 +360,6 @@ function viewFeedback(facultyId,schoolId) {
     
             let formDetails = ``;
             formDetails += `<form action="/feedback/add-feedback-by-id" id="feedbackForm" method="post">
-                                  <input type="hidden"  value="${schoolId}" class="form-control" name="school_id">
                                   <input type="hidden"  value="${facultyId}" class="form-control" name="faculty_id">
                                   <input type="hidden"  value="2" class="form-control" name="student_id">
                                  
@@ -397,7 +392,7 @@ function viewFeedback(facultyId,schoolId) {
     }
   }
   
-   function deleteFeedback(facultyId,schoolId) {
+   function deleteFeedback(feedbackId) {
     try {
      
       $("#deleteFeedbackDiv").html("");
@@ -406,8 +401,7 @@ function viewFeedback(facultyId,schoolId) {
           
             let formDetails = ``;
             formDetails += `
-                    <input type="hidden" class="form-control" name="facultyId" id="facultyId" value="${facultyId}">
-                    <input type="hidden" class="form-control" name="schoolId" id="schoolId" value="${schoolId}">
+                    <input type="hidden" class="form-control" name="feedback_id" id="feedback_id" value="${feedbackId}">
         
                     
                    <div class="col-md-12">
@@ -525,14 +519,13 @@ $(document).ready(function(){
    });
 	$(document).on("click",".delBtn",function(){
 		
- const studentId = $("#studentId").val();
- const schoolId = $("#schoolId").val();
+ const feedbackId = $("#feedback_id").val();
   $.ajax({
         url: '/feedback/delete-feedback',
         type: "POST",
         data: {
-          studentId:studentId,
-          schoolId:schoolId
+          feedbackId:feedbackId,
+          
         },
         success: function () {
       $("#deleteFeedbackModal").modal("hide");
