maximum bugs fixed

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -11,6 +11,18 @@
                   </li>
                   <li class="treeview">
                      <a href="#">
+                     <i class="fa fa-users"></i><span>Class</span>
+                     <span class="pull-right-container">
+                     <i class="fa fa-angle-left pull-right"></i>
+                     </span>
+                     </a>
+                     <ul class="treeview-menu">
+                        <li><a href="/classes/classes">All Class</a></li>
+                     </ul>
+                  </li>
+                 
+                   <li class="treeview">
+                     <a href="#">
                      <i class="fa fa-users"></i><span>Admission Module</span>
                      <span class="pull-right-container">
                      <i class="fa fa-angle-left pull-right"></i>
@@ -42,6 +54,7 @@
                      </a>
                      <ul class="treeview-menu">
                         <li><a href="/exam/view-exam">All Exam</a></li>
+                        <li><a href="/exam/subject-marks">Subjective Marks</a></li>
                      </ul>
                   </li>
                   
@@ -53,8 +66,8 @@
                      </span>
                      </a>
                      <ul class="treeview-menu">
-                        <li><a href="/financial/financial-student">Student Wise</a></li>
-                        <li><a href="/financial/financial-faculty">Faculty Wise</a></li>
+                        <li><a href="/financial/student-financial">Student Wise</a></li>
+                        <li><a href="/financial/faculty-financial">Faculty Wise</a></li>
                       
                      </ul>
                   </li>
@@ -68,7 +81,7 @@
                      </a>
                      <ul class="treeview-menu">
                         <li><a href="/test-series/online-test">Online Test</a></li>
-                        <li><a href="/test-series/practice-test">Practice Test</a></li>
+                       
                      </ul>
                   </li>
                   <!-- <li class="treeview">
