--- a/views/admin/exam/exam.ejs
+++ b/views/admin/exam/exam.ejs
@@ -97,7 +97,7 @@
                             <div class="row">
                                 <div class="form-group col-lg-6">
                                     <label>Exam</label>
-                                    <input type="text" id="exam_name" class="form-control" name="exam_name">
+                                    <input type="text" id="exam_name" placeholder="Enter Exam Name" class="form-control" name="exam_name">
                                 </div>
                                  <div class="form-group col-lg-6">
                                     <label>Class</label>
@@ -108,22 +108,46 @@
                                        <% } %>
                                    </select>
                                 </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Subject</label>
+                                   <select name="subject_id" id="subject_id" class="form-control">
+                                    <option value="">Please Select</option>
+                                    <% for(let i = 0; i < subject.length; i++){%> 
+                                    <option value="<%= subject[i].id %>"><%= subject[i].subject_name %></option>
+                                       <% } %>
+                                   </select>
+                                </div>
                                   <div class="form-group col-lg-6">
-                                    <label>Type of Exam</label>
-                                   <select name="type_exam" id="type_exam" class="form-control">
+                                    <label>Mode of Exam</label>
+                                   <select name="exam_mode" id="exam_mode" class="form-control">
                                     <option value="">Please Select</option>
                                     <option value="practice">Practice</option>
                                     <option value="online">Online</option>
+                                    <option value="quiz">Quiz</option>
                                    </select>
                                 </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Type of Exam</label>
+                                   <select name="exam_type" id="exam_type" class="form-control">
+                                    <option value="">Please Select</option>
+                                    <option value="subjective">Subjective</option>
+                                    <option value="objective">Objective</option>
+                                   </select>
+                                </div>
+
+                              
                                     
                                   <div class="form-group col-lg-6">
                                     <label>Start Date</label>
                                     <input type="date" id="start_date" class="form-control" name="start_date">
                                 </div>
                                  <div class="form-group col-lg-6">
-                                    <label> End Date</label>
+                                    <label>End Date</label>
                                     <input type="date" id="end_date" class="form-control" name="end_date">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Total Marks</label>
+                                    <input type="text" id="total_marks" class="form-control" name="total_marks">
                                 </div>
                                 
                             </div>
@@ -313,10 +337,9 @@
            option += `<option value="${data.classes[i].id}"${data.data[0].class_id==data.classes[i].id?'selected':""}>${data.classes[i].class_name}</option>`
         }
             let formDetails = ``;
-            formDetails += `  <form action="/exam/update-exam-by-id" >
+            formDetails += `  <form action="/exam/update-exam-by-id" method="POST" >
                                    <input type="hidden"  value="${examId}" class="form-control" name="exam_id">
                                   <input type="hidden"  value="${schoolId}" class="form-control" name="school_id">
-                                  <input type="hidden" value="${classId}" class="form-control" name="class_id">
                             <div class="row">
                                  <div class="form-group col-lg-6">
                                     <label>Exam</label>
@@ -334,6 +357,7 @@
                                     <option value="">Please Select</option>
                                     <option value="practice"${data.data[0].type_exam=="practice"?'selected':""}>Practice</option>
                                     <option value="online"${data.data[0].type_exam=="online"?'selected':""}>Online</option>
+                                    <option value="quiz"${data.data[0].type_exam=="quiz"?'selected':""}>Quiz</option>
                                    </select>
                                 </div>
                                     
@@ -591,7 +615,7 @@ var dataTable = $('#sample_data').DataTable({
 				{
 					$(this).attr('data-name', 'class_name');
 					$(this).attr('class', 'class_name');
-					$(this).attr('data-type', 'text');
+					$(this).attr('data-type', 'select');
 					$(this).attr('data-pk', data.id);
 				}
 				
@@ -603,7 +627,7 @@ var dataTable = $('#sample_data').DataTable({
 		container:'body',
 		selector:'td.exam_name',
 		url:'/exam/update-exam',
-		title:'Exam Name',
+		title:'Exam Exam Name',
 		type:'POST',
 		validate:function(value){
 			if($.trim(value) == '')
