--- a/views/admin/financial/financial-student.ejs
+++ b/views/admin/financial/financial-student.ejs
@@ -1,25 +1,10 @@
 <%- include('../../partials/top-bar') %>
 
+
       <!-- Site wrapper -->
       <div class="wrapper">
          <%- include('../../partials/header') %>
-		  <style>
-      .loading-image {
-        position: absolute;
 		
-        top: 48%;
-        left: 32%;
-        transform: translateY(-50%) translateX(50%);
-      }
-      .loader {
-        display: none;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.8);
-        position: fixed;
-        z-index: 99999;
-      }
-    </style>
          <!-- =============================================== -->
          <!-- Left side column. contains the sidebar -->
        <%- include('../../partials/sidebar') %>
@@ -28,13 +13,7 @@
          <!-- =============================================== -->
          <!-- Content Wrapper. Contains page content -->
          <div class="content-wrapper">
-			   <div class="loader" id="loader">
-      <img
-        class="loading-image" style="width: 100px;"
-        src="/assets/images/loader.webp"
-        alt="loading.."
-      />
-	   </div>
+			   
             <!-- Content Header (Page header) -->
             <section class="content-header">
                <div class="header-icon">
@@ -53,26 +32,31 @@
                         <div class="panel-heading">
                            <div class="btn-group" id="buttonexport">
                               <a href="#">
-                                 <h4>Student Financial Data</h4>
+                                 <h4>All student</h4>
                               </a>
                            </div>
                         </div>
                         <div class="panel-body">
+                            <%- include('../../partials/message') %>
+                           
 					 <div class="row"> 
- <div class="col-md-6 text-left">
-								 <input type="checkbox" class='checkall' id='checkall'> &nbsp;&nbsp; <input type="button" class="btn-sm btn-danger para" id='delete_record' value='Check All & Delete' >
-
-                <input type="button" id="btnAdd" class="btn-sm btn-primary para" value="Export as PDF" />
-                <input type="button" id="btnAdd" class="btn-sm btn-primary para" value="Export as Excel" />
-				
-            </div>
-            <div class="col-md-6 text-right">
-                <input type="button" id="btnAdd" class="btn-sm btn-success para" value="Add New" />
-                <input type="button" id="btnAdd" class="btn-sm btn-success para" value="Bulk Create" />
-				
-            </div>
+ <div class="form-group col-lg-3"></div>
+								  <div class="form-group col-lg-6">
+                                    <label>Class</label>
+                                   <select name="student_class_id" id="student_class_id" class="form-control" required>
+                                    <option value="">Please Select</option>
+                                    <% for(let i = 0; i < data.length; i++){%> 
+                                    <option value="<%= data[i].id %>" class="getclass_<%= data[i].id %>"><%= data[i].class_name %></option>
+                                       <% } %>
+                                   </select> 
+                                </div>
+                                 <div class="form-group col-lg-3"></div>
+       
+           
 			<br>
         </div>
+
+      
 		<br>
 
 					<div class="table-responsive">
@@ -81,13 +65,15 @@
 						
 							<thead>
 								<tr>
-									<th></th>
+									
 									<th> Name</th>
+									<th> Father Name</th>
 									<th> Email</th>
-									<th>Gender</th>
-									<th>Action</th>
+									
+									<th class="noExport">Action</th>
 								</tr>
 							</thead>
+                   
 						</table>
 					</div>
 				</div>
@@ -101,66 +87,159 @@
          <!-- /.content-wrapper -->
         <%- include('../../partials/footer') %>
       </div>
-	   <div class="modal fade" id="addtask" tabindex="-1" role="dialog">
-                  <div class="modal-dialog">
-                     <div class="modal-content">
-                        <div class="modal-header modal-header-primary">
-                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                           <h3><i class="fa fa-plus m-r-5"></i> add new task</h3>
-                        </div>
-                        <div class="modal-body">
-                           <div class="row">
-                              <div class="col-md-12">
-                                 <form class="form-horizontal">
-                                    <fieldset>
-                                       <!-- Text input-->
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">Task Name</label>
-                                          <input type="text" placeholder="Task Name" class="form-control">
-                                       </div>
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">Due date</label>
-                                          <input type="number" placeholder="Due title" class="form-control">
-                                       </div>
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">Description</label>
-                                          <input type="text" placeholder="Description" class="form-control">
-                                       </div>
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">Assign to</label>
-                                          <input type="text" placeholder="Assign to" class="form-control">
-                                       </div>
-                                       <!-- Text input-->
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">status</label>
-                                          <input type="text" placeholder="status" class="form-control">
-                                       </div>
-                                       <div class="col-md-12 form-group user-form-group">
-                                          <div class="pull-right">
-                                             <button type="button" class="btn btn-danger btn-sm">Cancel</button>
-                                             <button type="submit" class="btn btn-add btn-sm">Update</button>
-                                          </div>
-                                       </div>
-                                    </fieldset>
-                                 </form>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="modal-footer">
-                           <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
-                        </div>
-                     </div>
-                     <!-- /.modal-content -->
-                  </div>
-                  <!-- /.modal-dialog -->
-               </div>
+
+                 
       <!-- /.wrapper -->
       <!-- Start Core Plugins
+         
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
    <script type="text/javascript" language="javascript">
 
+
+  
+       
+function viewAdmission(studentId) {
+    try {
+     
+      $("#viewStudentDiv").html("");
+      $("#viewStudentModal").modal("toggle");
+      $.ajax({
+         url: `/admission/view-student-byid`,
+         type: "post",
+         data:{studentId:studentId},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+    console.log(data);
+            let formDetails = ``;
+            formDetails += `<table class="table table-bordered table-striped"> 
+               
+               <tr><td>Photo</td><td><img src="/uploads/student/${data[0].email}/${data[0].photo}" width="100px"></td></tr>
+               <tr><td>Name</td><td>${data[0].name}</td></tr>
+               <tr><td>Email</td><td>${data[0].email}</td></tr>
+               <tr><td>Gender</td><td>${data[0].gender}</td></tr>
+                <tr><td>Father Name</td><td>${data[0].fathers_name}</td></tr>
+               <tr><td>Mother Name</td><td>${data[0].mothers_name}</td></tr>
+               <tr><td>Parent Phone</td><td>${data[0].parent_phone}</td></tr>
+               <tr><td>Class</td><td>${data[0].class_name}</td></tr>
+               <tr><td>School</td><td>${data[0].school_name}</td></tr>
+               <tr><td>address</td><td>${data[0].address}</td></tr>
+               <tr><td>DOB</td><td>${data[0].dob}</td></tr>
+              
+               </table>`;
+            $("#viewStudentDiv").html(formDetails);
+          
+        },
+      });
+    } catch (err) {
+      console.error(err);
+    }
+  }
+
+
+                  function editAdmission(studentId) {
+    try {
+     
+      $("#editStudentDiv").html("");
+      $("#editStudentModal").modal("toggle");
+      $.ajax({
+         url: `/admission/fetch-student-byid`,
+         type: "post",
+         data:{studentId:studentId},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+        console.log(data);
+        let option;
+        for(let i=0; i<data.classes.length; i++){
+           option += `<option value="${data.classes[i].id}"${data.data[0].class_id==data.classes[i].id?'selected':""}>${data.classes[i].class_name}</option>`
+        }
+            let formDetails = ``;
+            formDetails += `<form action="/admission/update-admission-by-id" method="post" enctype="multipart/form-data">
+                             
+                                  <input type="hidden"  value="${studentId}" class="form-control" name="student_id">
+                            <div class="row">
+                                <div class="form-group col-lg-6">
+                                    <label>Name</label>
+                                    <input type="text" class="form-control" value="${data.data[0].name}" name="student_name">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Father's Name</label>
+                                    <input type="text" class="form-control" value="${data.data[0].fathers_name}" name="student_father_name">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Mother's Name</label>
+                                    <input type="text" class="form-control" value="${data.data[0].mothers_name}" name="student_mother_name">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Parent  Phone Number</label>
+                                    <input type="text"  class="form-control" value="${data.data[0].parent_phone}" name="student_parent_phone">
+                                </div>
+                               
+                                  <div class="form-group col-lg-6">
+                                    <label>Class</label>
+                                   <select name="student_class_id" class="form-control">
+                                    <option value="">Please Select</option>
+                                   ${option}
+                                   </select>
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Gender</label>
+                                   <select name="student_gender"  class="form-control">
+                                    <option value="">Please Select</option>
+                                    <option value="Male" ${data.data[0].gender=="Male"?'selected':""}>Male</option>
+                                    <option value="Female" ${data.data[0].gender=="Female"?'selected':""}>Female</option>
+                                   </select>
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Hobbies</label>
+                                    <input type="text" value="${data.data[0].hobby}" class="form-control" name="student_hobbies">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>DOB</label>
+                                    <input type="date" value="${data.data[0].dob}" class="form-control" name="student_dob">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>Email ID</label>
+                                    <input type="email" value="${data.data[0].email}"  class="form-control" name="student_email" >
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>Phone Number</label>
+                                    <input type="text" value="${data.data[0].phone}" class="form-control" name="student_phone">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label> Address</label>
+                                  
+                                    <textarea placeholder="Address" rows="5" class="form-control" name="student_address">${data.data[0].address}</textarea>
+                                </div>
+                              
+                                <div class="form-group col-lg-6">
+                                
+                                    <label>Upload Photo</label>
+                                     <img src="/uploads/student/${data.data[0].email}/${data.data[0].photo}" width="100px">
+                                    <input type="file" class="form-control" name="student_photo">
+                                </div>
+                            </div>
+                            <div align="center">
+                               <input type="submit" class="btn btn-success"
+															value="Update">
+															
+														
+                            </div>
+                        </form>`;
+            $("#editStudentDiv").html(formDetails);
+          
+        },
+      });
+    } catch (err) {
+      console.error(err);
+    }
+  }
+  
+
+    
 $(document).ready(function(){
 	
 
@@ -181,159 +260,56 @@ $(document).ready(function(){
 				'hideMethod': 'fadeOut',
 			}
 
-    
-    // Check all 
-   $('#checkall').click(function(){
-      if($(this).is(':checked')){
-         $('.delete_check').prop('checked', true);
-      }else{
-         $('.delete_check').prop('checked', false);
-      }
-   });
-
-   // Delete record
-   $('#delete_record').click(function(){
-      var deleteids_arr = [];
-      // Read all checked checkboxes
-      $("input:checkbox[class=delete_check]:checked").each(function () {
-         deleteids_arr.push($(this).attr('data-id'));
-      });
-
-      // Check checkbox checked or not
-      if(deleteids_arr.length > 0){
-
-         // Confirm alert
-         var confirmdelete = confirm("Do you really want to Delete records?");
-         if (confirmdelete == true) {
-
-			
-            $.ajax({
-               url: '/admission/delete-multiple',
-               type: 'post',
-               data: {deleteids_arr: deleteids_arr},
-               success: function(response){
-				toastr.error('Record Deleted Successfuly !!')
-                  $('#sample_data').DataTable().ajax.reload();
-               }
-            });
-         } 
-      }
-   });
-	$(document).on("click",".delBtn",function(){
-		 if(confirm('Are you sure you want to delete this?')){
- const id = $(this).attr('data-id');
- $('.loader').css('display','block');
-  $.ajax({
-        url: '/admission/delete-admission',
-        type: "POST",
-        data: {
-          id:id
-        },
-        success: function () {
-        $('.loader').css('display','none');
-
-     $('#sample_data').DataTable().ajax.reload();
-	toastr.error('Record Deleted Successfuly !!')
-
-        }
-    });
-		 }
- 
-});
-	var dataTable = $('#sample_data').DataTable({
+	  $("select#student_class_id").change(function(){
+        var classId = $(this).children("option:selected").val();
+	alert(classId)
+var dataTable = $('#sample_data').DataTable({
 		"processing": true,
 		"serverSide": true,
-		
+		 dom: 'Bfrtip',
+   buttons: [
+      {
+         extend: 'csv',
+        
+         exportOptions: {
+            columns: 'th:not(:last-child)'
+         }
+      },
+       {
+         extend: 'pdf',
+        
+         exportOptions: {
+            columns: 'th:not(:last-child)'
+         }
+      }
+   ],
 		"order":[],
 		"ajax":{
-			url:"/admission/get-admission",
+			url:"/financial/get-student-financial",
 			type:"POST",
+         data:{classId:classId},
 		},
          columns: [
-        { data: "check" },
+       
         { data: "name" },
+        { data: "fathername" },
         { data: "email" },
-        { data: "gender" },
         { data: "action" },
 	],
-		createdRow:function(row, data, rowIndex)
-		{
-			$.each($('td', row), function(colIndex){
-				if(colIndex == 1)
-				{
-					$(this).attr('data-name', 'name');
-					$(this).attr('class', 'name');
-					$(this).attr('data-type', 'text');
-					$(this).attr('data-pk', data.id);
-				}
-				if(colIndex == 2)
-				{
-					$(this).attr('data-name', 'email');
-					$(this).attr('class', 'email');
-					$(this).attr('data-type', 'text');
-					$(this).attr('data-pk', data.id);
-				}
-				if(colIndex == 3)
-				{
-					$(this).attr('data-name', 'gender');
-					$(this).attr('class', 'gender');
-					$(this).attr('data-type', 'select');
-					$(this).attr('data-pk', data.id);
-				}
-			});
-		}
-	});
-
-	$('#sample_data').editable({
-		container:'body',
-		selector:'td.name',
-		url:'/admission/update-admission',
-		title:'Name',
-		type:'POST',
-		validate:function(value){
-			if($.trim(value) == '')
-			{
-				return 'This field is required';
-			}
-				toastr.success('Record Updated Successfuly !!')
-
-		}
 		
 	});
 
-	$('#sample_data').editable({
-		container:'body',
-		selector:'td.email',
-		url:'/admission/update-admission',
-		title:'Email',
-		type:'POST',
-		validate:function(value){
-			
-			if($.trim(value) == '')
-			{
-				return 'This field is required';
-			}
-			toastr.success('Record Updated Successfuly !!')
-		}
-	});
-
-	$('#sample_data').editable({
-		container:'body',
-		selector:'td.gender',
-		url:'/admission/update-admission',
-		title:'Gender',
-		type:'POST',
-		datatype:'json',
-		source:[{value: "Male", text: "Male"}, {value: "Female", text: "Female"}],
-		validate:function(value){
-			
-			if($.trim(value) == '')
-			{
-				return 'This field is required';
-			}
-			toastr.success('Record Updated Successfuly !!')
-		}
-	});
+})
+  
 	
 });	
+setTimeout(function () {
+    $("#error").hide();
+  }, 3000);
+  setTimeout(function () {
+    $("#error_msg").hide();
+  }, 3000);
+  setTimeout(function () {
+    $("#success_msg").hide();
+  }, 3000);
 </script>
