--- a/views/admin/test-series/online-test.ejs
+++ b/views/admin/test-series/online-test.ejs
@@ -60,6 +60,7 @@
                         </div>
                         <div class="panel-body">
                   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                     <a href="/test-series/full-length-test">
                      <div id="cardbox1" style="background-color: #5d720f;">
                         <div class="statistic-box">
                            <i class="fa fa-user-plus fa-3x"></i>
@@ -71,8 +72,10 @@
                            <h3>Full Length Test</h3>
                         </div>
                      </div>
+                     </a>
                   </div>
                   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                      <a href="/test-series/practice-test">
                      <div id="cardbox2" style="background-color: #36784c;">
                         <div class="statistic-box">
                            <i class="fa fa-user-secret fa-3x"></i>
@@ -84,8 +87,10 @@
                            <h3> Section Wise Test</h3>
                         </div>
                      </div>
+                     </a>
                   </div>
                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                      <a href="/test-series/quiz-test">
                      <div id="cardbox2" style="background-color: #1a1a71;">
                         <div class="statistic-box">
                            <i class="fa fa-user-secret fa-3x"></i>
@@ -97,6 +102,7 @@
                            <h3> Daily Quiz</h3>
                         </div>
                      </div>
+                     </a>
                   </div>
                  
                 </div>
