--- a/views/admin/leave-tracker/leave-faculty-tracker.ejs
+++ b/views/admin/leave-tracker/leave-faculty-tracker.ejs
@@ -337,7 +337,7 @@ function viewLeaveTracker(leaveId) {
           
             let formDetails = ``;
             formDetails += `
-                    <input type="hidden" class="form-control" name="leaveId" id="studentLeaveId" value="${leaveId}">
+                    <input type="hidden" class="form-control" name="facultyLeaveId" id="studentLeaveId" value="${LeaveId}">
                   
                     
                    <div class="col-md-12">
